--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -93,6 +93,7 @@ nav ul li {
 
 .hero {
   display: flex;
+  text-align: justify;
   align-items: center;
   justify-content: center;
   gap: 2.5rem;
