--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -102,11 +102,13 @@ nav ul li {
   gap: 2.5rem;
   max-width: 68.75rem;
   margin: auto;
+
 }
 .hero img {
   margin-top: 1rem;
-  height: 15.5rem;
-  width: 15.5rem;
+  height: 12.5rem;
+  width: 12.5rem;
+  border-radius: 5rem;
 }
 
 .bio {
@@ -114,7 +116,7 @@ nav ul li {
   width: 25rem;
   padding: 0.625rem;
   border-radius: 6px;
-  box-shadow: 0px 2px 15px 2px var(--primary-shadow);
+  box-shadow: 0px 2px 30px 0.5px var(--primary-shadow);
 }
 
 .bio h1 {
@@ -381,12 +383,15 @@ footer {
   }
 
   .hero img {
-    height: 37.5rem;
-    width: 30rem;
+    margin-top: 5rem;
+    height: 10.5rem;
+    width: 10.5rem;
+    border-radius: 5rem;
   }
+  
 
   .bio {
-    margin-top: -7rem;
+    margin-top: 7rem;
     width: 20.5rem;
   }
 
@@ -413,8 +418,8 @@ footer {
   }
 
   .project-container {
-    width: 20.875rem;
-  }
+    width: 20.875rem; 
+  overflow: scroll; }
 
   .contact-form-container {
     max-width: 23.75rem;
@@ -423,16 +428,19 @@ footer {
 
 @media screen and (max-width: 420px) {
   .hero img {
-    height: 37.5rem;
-    width: 23rem;
+    margin-top: 5rem;
+    height: 10.5rem;
+    width: 10.5rem;
+    border-radius: 5rem;
   }
-
+  
   .bio {
     width: 18.3rem;
   }
 
   .project-container {
     width: 17.875rem;
+    overflow: scroll;
   }
 
   .contact-form-container {
